--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.props" Condition="Exists('..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.props')" />
+  <Import Project="..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.props" Condition="Exists('..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.props')" />
+  <Import Project="..\packages\NUnit3TestAdapter.3.15.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.15.0\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.props" Condition="Exists('..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.props')" />
-  <Import Project="..\packages\NUnit3TestAdapter.3.14.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.14.0\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="..\packages\NUnit.3.12.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -56,11 +56,11 @@
     <Reference Include="ReportPortal.Log4Net, Version=1.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.Log4Net.1.2.3\lib\net45\ReportPortal.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ReportPortal.NUnitExtension, Version=3.7.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.NUnit.3.7.8\lib\net45\ReportPortal.NUnitExtension.dll</HintPath>
+    <Reference Include="ReportPortal.NUnitExtension, Version=3.7.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ReportPortal.NUnit.3.7.9\lib\net45\ReportPortal.NUnitExtension.dll</HintPath>
     </Reference>
-    <Reference Include="ReportPortal.Shared, Version=2.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.Shared.2.3.1\lib\net45\ReportPortal.Shared.dll</HintPath>
+    <Reference Include="ReportPortal.Shared, Version=2.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ReportPortal.Shared.2.3.2\lib\net45\ReportPortal.Shared.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -94,9 +94,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ReportPortal.config.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="ReportPortal.config.json" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
@@ -112,18 +110,18 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.12.0\build\NUnit.props'))" />
-    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.14.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.14.0\build\net35\NUnit3TestAdapter.props'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Client.2.1.14\build\ReportPortal.Client.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Client.2.1.14\build\ReportPortal.Client.targets'))" />
-    <Error Condition="!Exists('..\packages\ReportPortal.Shared.2.3.1\build\ReportPortal.Shared.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Shared.2.3.1\build\ReportPortal.Shared.targets'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.props'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.targets'))" />
-    <Error Condition="!Exists('..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.props'))" />
-    <Error Condition="!Exists('..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.targets'))" />
+    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.15.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.15.0\build\net35\NUnit3TestAdapter.props'))" />
+    <Error Condition="!Exists('..\packages\ReportPortal.Shared.2.3.2\build\ReportPortal.Shared.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Shared.2.3.2\build\ReportPortal.Shared.targets'))" />
+    <Error Condition="!Exists('..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.props'))" />
+    <Error Condition="!Exists('..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.targets'))" />
   </Target>
   <Import Project="..\packages\ReportPortal.Client.2.1.14\build\ReportPortal.Client.targets" Condition="Exists('..\packages\ReportPortal.Client.2.1.14\build\ReportPortal.Client.targets')" />
-  <Import Project="..\packages\ReportPortal.Shared.2.3.1\build\ReportPortal.Shared.targets" Condition="Exists('..\packages\ReportPortal.Shared.2.3.1\build\ReportPortal.Shared.targets')" />
   <Import Project="..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.targets" Condition="Exists('..\packages\ReportPortal.Extensions.SourceBack.1.0.14\build\ReportPortal.Extensions.SourceBack.targets')" />
-  <Import Project="..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.targets" Condition="Exists('..\packages\ReportPortal.NUnit.3.7.8\build\ReportPortal.NUnit.targets')" />
+  <Import Project="..\packages\ReportPortal.Shared.2.3.2\build\ReportPortal.Shared.targets" Condition="Exists('..\packages\ReportPortal.Shared.2.3.2\build\ReportPortal.Shared.targets')" />
+  <Import Project="..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.targets" Condition="Exists('..\packages\ReportPortal.NUnit.3.7.9\build\ReportPortal.NUnit.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
