--- a/src/Example/app.config
+++ b/src/Example/app.config
@@ -21,6 +21,10 @@
         <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.12.0.0" newVersion="3.12.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.4.5.0" newVersion="1.4.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
