--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -4,11 +4,11 @@
   <package id="NUnit" version="3.12.0" targetFramework="net45" />
   <package id="NUnit.Engine.Api" version="3.11.1" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net45" developmentDependency="true" />
-  <package id="ReportPortal.Client" version="2.1.15" targetFramework="net45" />
-  <package id="ReportPortal.Extensions.SourceBack" version="1.1.2" targetFramework="net45" />
-  <package id="ReportPortal.Log4Net" version="1.2.3" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="3.7.15" targetFramework="net45" />
-  <package id="ReportPortal.Shared" version="2.5.0" targetFramework="net45" />
+  <package id="ReportPortal.Client" version="3.0.0-alpha.15" targetFramework="net45" />
+  <package id="ReportPortal.Extensions.SourceBack" version="2.0.0-alpha.3" targetFramework="net45" />
+  <package id="ReportPortal.Log4Net" version="2.0.0-alpha.1" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="4.0.0-dev.901" targetFramework="net45" />
+  <package id="ReportPortal.Shared" version="3.0.0-alpha.50" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.8.0" targetFramework="net45" />
 </packages>
