--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -47,7 +47,7 @@
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="ReportPortal.Client, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.Client.3.0.0-alpha.15\lib\net45\ReportPortal.Client.dll</HintPath>
+      <HintPath>..\packages\ReportPortal.Client.3.0.0-alpha.17\lib\net45\ReportPortal.Client.dll</HintPath>
     </Reference>
     <Reference Include="ReportPortal.Extensions.SourceBack, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\lib\net45\ReportPortal.Extensions.SourceBack.dll</HintPath>
@@ -116,17 +116,17 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.12.0\build\NUnit.props'))" />
     <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.16.1\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.16.1\build\net35\NUnit3TestAdapter.props'))" />
-    <Error Condition="!Exists('..\packages\ReportPortal.Client.3.0.0-alpha.15\build\ReportPortal.Client.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Client.3.0.0-alpha.15\build\ReportPortal.Client.targets'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Shared.3.0.0-alpha.50\build\net45\ReportPortal.Shared.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Shared.3.0.0-alpha.50\build\net45\ReportPortal.Shared.targets'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.props'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.targets'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.props'))" />
     <Error Condition="!Exists('..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.targets'))" />
+    <Error Condition="!Exists('..\packages\ReportPortal.Client.3.0.0-alpha.17\build\net45\ReportPortal.Client.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ReportPortal.Client.3.0.0-alpha.17\build\net45\ReportPortal.Client.targets'))" />
   </Target>
-  <Import Project="..\packages\ReportPortal.Client.3.0.0-alpha.15\build\ReportPortal.Client.targets" Condition="Exists('..\packages\ReportPortal.Client.3.0.0-alpha.15\build\ReportPortal.Client.targets')" />
   <Import Project="..\packages\ReportPortal.Shared.3.0.0-alpha.50\build\net45\ReportPortal.Shared.targets" Condition="Exists('..\packages\ReportPortal.Shared.3.0.0-alpha.50\build\net45\ReportPortal.Shared.targets')" />
   <Import Project="..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.targets" Condition="Exists('..\packages\ReportPortal.Extensions.SourceBack.2.0.0-alpha.5\build\net45\ReportPortal.Extensions.SourceBack.targets')" />
   <Import Project="..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.targets" Condition="Exists('..\packages\ReportPortal.NUnit.4.0.0-alpha.9\build\net45\ReportPortal.NUnit.targets')" />
+  <Import Project="..\packages\ReportPortal.Client.3.0.0-alpha.17\build\net45\ReportPortal.Client.targets" Condition="Exists('..\packages\ReportPortal.Client.3.0.0-alpha.17\build\net45\ReportPortal.Client.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
